<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="album_app_name">SimpleAlbum</string>

    <string name="test_string">This is test text.</string>
    <string name="test_long_string">This is test text.This is test text.This is test text.This is test text.This is test text.</string>
    <string name="register_canceled">Registration cancelled.</string>
    <string name="greetings">Welcome!</string>
    <string name="login_username">Name</string>
    <string name="login_username_hint">Enter your name here.</string>
    <string name="login_userage">age</string>
    <string name="login_userage_hint">Enter your age here.</string>
    <string name="login_usergender">gender</string>
    <string name="login_gender_male">male</string>
    <string name="login_gender_female">female</string>
    <string name="login_useraddress">address</string>
    <string name="login_useraddress_hint">Enter your address here.</string>
    <string name="login_email">Email</string>
    <string name="login_email_hint">Enter Email Here.</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">Enter Password Here.</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_forgot_password">Forgot password?</string>
    <!--    <string name="login_sign_in_with_google">Sign In With Google</string>-->
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_sign_in_susscess_tip">Signed In</string>
    <string name="login_sign_in_failure_tip">Your Password DOES NOT Match Your Account！</string>
    <string name="login_agree_licence"><u>I agree with user licence.</u>></string>
    <string name="album_prev">show prev</string>
    <string name="album_next">show next</string>
    <string name="album_no_prev">already first image</string>
    <string name="album_no_next">already last image</string>
    <string name="album_app_name_en" translatable="false">SimpleAlbum</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_conform">Confirm</string>
    <string name="signup_success">Sign up success, login please.</string>
    <string name="signup_fail_data_invalid">Sign up failed, data invalid.</string>
    <string name="signup_fail_not_agree_licence">Sign up failed, not agree licence.</string>
    <string name="LogOut">Log out</string>
    <string name="forget_pass_tip">Forget password? We can find it!</string>
    <string name="forget_pass_no_user">User not sign up!</string>
    <string name="forget_pass_name_not_match">User name not match!</string>
    <string name="forget_pass_result">Your password is:</string>
    <string name="title_activity_eulaactivity">EULA &amp; Privacy Policies</string>
    <!-- Strings used for fragments for navigation -->
    <string name="EULATitle"> EULA </string>
    <string name="privacyAgreementTitle">Privacy Policies</string>
    <string name="next">See Privacy Policies</string>
    <string name="previous">Return to EULA</string>
    <string name="confirmReadEULA">I\'ve got that, thanks.</string>
    <string name="EULAContent">1.1 Your use of YDJSIR’s products, software, services and web sites (referred to collectively as the “Services” in this document and excluding any services provided to you by YDJSIR under a separate written agreement) is subject to the terms of a legal agreement between you and YDJSIR. This document explains how the agreement is made up, and sets out some of the terms of that agreement.

1.2 Unless otherwise agreed in writing with YDJSIR, your agreement with YDJSIR will always include, at a minimum, the terms and conditions set out in this document. These are referred to below as the “Universal Terms”.

1.3 Your agreement with YDJSIR will also include the terms of any Legal Notices applicable to the Services, in addition to the Universal Terms. </string>
    <string name="privacyAgreementContent">

We build a range of services that help millions of people daily to explore and interact with the world in new ways. Our services include:

- YDJSIR\'s apps, sites, and devices, like Simple Album
- Products that are integrated into third-party apps and sites, like ads and embedded YDJSIR\'s Albums

You can use our services in a variety of ways to manage your privacy. For example, you can sign up for a YDJSIR Account if you want to create and manage content like emails and photos, or see more relevant search results. And you can use many YDJSIR services when you’re signed out or without creating an account at all, like searching on YDJSIR. And across our services, you can adjust your privacy settings to control what we collect and how your information is used. </string>
</resources>