<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.example.album.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:fontFamily="@font/aguafina_script"
        android:gravity="center"
        android:text="@string/album_app_name_en"
        android:textColor="@color/theme_color_1_t2"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_username"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:theme="@style/LoginEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_email"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_useremail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:theme="@style/LoginEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_password"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_userpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:theme="@style/LoginEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_userage"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_userage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/login_userage_hint"
            android:inputType="number"
            android:theme="@style/LoginEditText" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_usergender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_usergender"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_gender_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/login_gender_male" />

        <RadioButton
            android:id="@+id/rb_gender_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/login_gender_female" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/login_useraddress"
            android:textColor="@color/theme_color_1_t3"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_useraddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/login_useraddress_hint"
            android:inputType="text"
            android:theme="@style/LoginEditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/cb_licence"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree_licence"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/login_conform" />

    </LinearLayout>

</LinearLayout>